[gd_scene load_steps=2 format=3 uid="uid://cqihwsl5d4smn"]

[ext_resource type="Script" path="res://interactions/Hide and Fade Interaction Area/HideArea.gd" id="1_8wbpy"]

[node name="HideArea" type="Area2D"]
script = ExtResource("1_8wbpy")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
